# CryptoSwarms

./: .env.example  .gitignore  AGENTS.md  Ev prompts.txt  IMPLEMENTATION_CHECKLIST.md  Makefile  README.md  README_ALPHA_DISCOVERY.md  README_TUI.md  alembic.ini  claude_code_integration.py  cryptoswarms_circuit_breaker_stress_test.md  docker-compose.optional.yml  docker-compose.yml  docs_vertical_slice_checklist.md  hyperliquid_api.py  moon_dev_tui.py  polymarket_api.py  pyproject.toml  pytest.ini  requirements.txt  requirements_tui.txt  run_moon_dev_tui.py
agents/: Dockerfile
api/: dashboard_repository.py  dependencies.py  main.py  settings.py  utils.py
cryptoswarms/: __init__.py  adapters.py  agent_runner.py  alpha_discovery_engine.py  backtest_engine.py  base_rate_registry.py  bayesian_update.py  budget_guard.py  core_adapters.py  costs.py  crypto_strategy_pack.py  dag_recall.py  dag_summarizer.py  dashboard_insights.py  deadman.py  decision_engine.py  deepflow_preflight.py  evolution_phase_gate.py  execution_guard.py  execution_router.py  expansion_policy.py  failure_ledger.py  fractional_kelly.py  funding_agent.py  immutable_artifacts.py  immutable_audit.py  kelly_sizer.py  macro_calendar.py  memory_dag.py  observability.py  paper_trading.py  paperclip_runtime.py  phase1_runtime.py  position_manager.py  real_base_rate_registry.py  reconciliation.py  regime_agent.py  reporting.py  research_agent.py  risk.py  (+14 more)
cryptoswarms.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: agent_memory_dag.json  backtest_report_20260315_001241.txt  backtest_report_20260315_001357.txt  backtest_report_20260315_001731.txt  backtest_report_20260315_001800.txt  backtest_report_20260315_001839.txt  backtest_report_multi_20260315_002236.txt  backtest_report_multi_20260315_002308.txt  backtest_report_multi_20260315_002840.txt  backtest_report_multi_20260315_002859.txt  backtest_report_multi_20260315_002942.txt  backtest_report_multi_20260315_002957.txt  test_refinery_dag.json  (+7 more)
(+376 files in other folders)
